--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -95,4 +95,8 @@ body {
 }
 .menu ul a svg {
   margin-right: 8px;
+}
+
+.btn-wtd {
+  color: #284b63 !important;
 }/*# sourceMappingURL=stylesheet.css.map */
