--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -98,5 +98,5 @@ body {
 }
 
 .btn-wtd {
-  color: #284b63 !important;
+  background-color: #284b63 !important;
 }/*# sourceMappingURL=stylesheet.css.map */
