--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -99,4 +99,8 @@ body {
 
 .btn-wtd {
   background-color: #284b63 !important;
+}
+
+input {
+  color: black;
 }/*# sourceMappingURL=stylesheet.css.map */
