--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,8 +1,8 @@
-input.input-wtd{
-    color: black;
+.input-wtd{
+    color: black !important;
 }
 
-label.label-wtd{
-    color: black;
+.label-wtd{
+    color: black !important;
     font-weight: bold;
 }
