--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -1,4 +1,8 @@
 .stat {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
