--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -14,6 +14,7 @@
     background-color: transparent;
     border: none;
     font-size: 10px;
+    width: 15px;
 }
 .stat input:focus {
     background-color: transparent;
