--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -15,6 +15,7 @@
     border: none;
     width: 15px;
 }
+
 .stat input:focus {
     background-color: transparent;
     border: none;
@@ -26,4 +27,21 @@
 
 #insp {
     cursor: pointer;
+}
+
+#dice-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    background-image: url(/public/assets/woodgrain2.jpg);
+    background-size: cover;
+}
+
+#dice-box canvas {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
