--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -36,5 +36,14 @@
 canvas {
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
+}
+
+#sign{
+    position: relative;
+    z-index: 2;
+    background-image: url(../rsc/wooden-sign-background-png.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
