--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -40,6 +40,7 @@ canvas {
 }
 
 #sign{
+    color: black;
     position: relative;
     z-index: 2;
     background-image: url(../rsc/wooden-sign-background-png.webp);
