--- a/src/styles/dydTablero.css
+++ b/src/styles/dydTablero.css
@@ -39,7 +39,7 @@ canvas {
     z-index: 2;
 }
 
-#sign{
+#sign {
     color: black;
     position: relative;
     z-index: 2;
@@ -47,4 +47,8 @@ canvas {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+#rollem:focus {
+    border: none;
 }
